[project]
name = "video-fingerprint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=14.4.0",
    "einops>=0.8.1",
    "matplotlib>=3.10.3",
    "numpy>=2.1.0",
    "opencv-python>=4.11.0.86",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
    "markupsafe<3.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchaudio>=2.5.1",
    "faiss-cpu>=1.11.0",
    "tqdm>=4.66.5",
    "ruff>=0.12.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
